reorganization and fixed bugs